# relspace

relationality-lab/: .gitignore  .tmuxp.yaml  Makefile  README.md  pylintrc  pyproject.toml  setup
relationality-lab/src/relationality/: fields.py  free_model.py  util.py
relationality-lab/tests/relationality/: test_fields.py
